--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,18 +9,22 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
+
       - name: Set up JDK 17
-        uses: actions/setup-java@v3
+        uses: actions/setup-java@v4
         with:
           distribution: temurin
           java-version: 17
+
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
+
       - name: Build with Gradle
         run: ./gradlew assembleRelease
-      - name: Upload APK
-        uses: actions/upload-artifact@v3
+
+      - name: Upload APK artifact
+        uses: actions/upload-artifact@v4
         with:
           name: PresstvLive-APK
           path: app/build/outputs/apk/release/app-release.apk
